--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,8 @@ spring.datasource.username=root
 spring.datasource.password=kaymilyg
 
 #JPA
-spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 #spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.hibernate.ddl-auto=validate // Valida el esquema de la base de datos
 #spring.jpa.hibernate.ddl-auto=create-drop
